feat:new code fun

--- a/src/assets/style/main.less
+++ b/src/assets/style/main.less
@@ -2,6 +2,10 @@
 @second-color: #5984b886;
 @dark: #33353b;
 
+#app,.n-config-provider{
+    width: 100%;
+    height: 100%;
+}
 .g-second-page {
     min-height: 100vh;
     box-sizing: border-box;
