--- a/src/assets/style/main.less
+++ b/src/assets/style/main.less
@@ -2,10 +2,12 @@
 @second-color: #5984b886;
 @dark: #33353b;
 
-#app,.n-config-provider{
+#app,
+.n-config-provider {
     width: 100%;
     height: 100%;
 }
+
 .g-second-page {
     min-height: 100vh;
     box-sizing: border-box;
@@ -174,6 +176,7 @@
     justify-content: flex-start;
     align-items: flex-start;
 }
+
 .text-overflow-ellipsis {
     overflow: hidden;
     text-overflow: ellipsis;
@@ -211,4 +214,8 @@
     -webkit-line-clamp: 5;
     overflow: hidden;
     word-break: break-all;
+}
+
+.container {
+    padding: 10px 12px;
 }
