refactor:refactor login page

--- a/src/assets/style/main.less
+++ b/src/assets/style/main.less
@@ -2,6 +2,10 @@
 @second-color: #5984b886;
 @dark: #33353b;
 
+.btn-primary{
+    background-color: #5A67BA;
+}
+
 #app,
 .n-config-provider {
     width: 100%;
