--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,12 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+@layer base {
+    button,
+    [type='button'],
+    [type='reset'],
+    [type='submit'] {
+      background-color: var(--n-color);
+    }
+  }
+  
