--- a/src/assets/style/main.less
+++ b/src/assets/style/main.less
@@ -2,213 +2,8 @@
 @second-color: #5984b886;
 @dark: #33353b;
 
-#app,.n-config-provider{
+#app,
+.n-config-provider {
     width: 100%;
     height: 100%;
-}
-.g-second-page {
-    min-height: 100vh;
-    box-sizing: border-box;
-    background-color: #fff;
-}
-
-.g-layout-container {
-    width: 70%;
-    margin: 0 auto;
-    min-width: 670px;
-    padding: 0 15px;
-
-    @media screen and (max-width:1760px) {
-        width: 75%;
-    }
-
-    @media screen and (max-width:1660px) {
-        width: 80%;
-    }
-
-    @media screen and (max-width:1560px) {
-        width: 85%;
-    }
-
-    @media screen and (max-width:1460px) {
-        width: 90%;
-    }
-
-    @media screen and (max-width:1360px) {
-        width: 95%;
-    }
-}
-
-.g-topic1 {
-    font-size: 30px;
-    font-weight: bold;
-    color: #000;
-}
-
-.g-topic2 {
-    font-size: 26px;
-    font-weight: bold;
-    color: #000;
-}
-
-.g-topic3 {
-    font-size: 22px;
-    font-weight: bold;
-    color: #000;
-}
-
-.g-topic4 {
-    font-size: 18px;
-    font-weight: bold;
-    color: #000;
-}
-
-.g-topic5 {
-    font-size: 17px;
-    font-weight: 500;
-    color: #000;
-}
-
-.g-descriptions {
-    font-size: 17px;
-    font-weight: 500;
-    color: #333;
-}
-
-.g-subtitle {
-    font-size: 16px;
-    font-weight: 500;
-    color: #222;
-}
-
-.g-second-subtitle {
-    font-size: 14px;
-    font-weight: 500;
-    color: #666;
-}
-
-.g-container-wrap {
-    padding: 30px 0;
-}
-
-.g-btn-content {
-    padding: 10px 0 0;
-    text-align: left;
-    .flex-end-center();
-
-    button {
-        margin-left: 15px;
-    }
-}
-
-.flex-start-center {
-    display: flex;
-    justify-content: center;
-    align-items: flex-start;
-}
-
-.flex-start {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-
-.flex-start-wrap {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-    flex-wrap: wrap;
-}
-
-.flex-center-start {
-    display: flex;
-    justify-content: flex-start;
-    align-items: center;
-}
-
-.flex-between {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-}
-
-.flex-between-wrap {
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
-    flex-wrap: wrap;
-}
-
-.flex-center {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-}
-
-.flex-center-end {
-    display: flex;
-    justify-content: center;
-    align-items: flex-end;
-}
-
-.flex-between-start {
-    display: flex;
-    justify-content: space-between;
-    align-items: flex-start;
-}
-
-.flex-around-start {
-    display: flex;
-    justify-content: space-around;
-    align-items: flex-start;
-}
-
-.flex-end-center {
-    display: flex;
-    justify-content: flex-end;
-    align-items: center;
-}
-
-.flex-start {
-    display: flex;
-    justify-content: flex-start;
-    align-items: flex-start;
-}
-.text-overflow-ellipsis {
-    overflow: hidden;
-    text-overflow: ellipsis;
-    white-space: nowrap;
-    word-break: break-all;
-}
-
-.text-overflow-ellipsis-2 {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 2;
-    overflow: hidden;
-    word-break: break-all;
-}
-
-.text-overflow-ellipsis-3 {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 3;
-    overflow: hidden;
-    word-break: break-all;
-}
-
-.text-overflow-ellipsis-4 {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 4;
-    overflow: hidden;
-    word-break: break-all;
-}
-
-.text-overflow-ellipsis-5 {
-    display: -webkit-box;
-    -webkit-box-orient: vertical;
-    -webkit-line-clamp: 5;
-    overflow: hidden;
-    word-break: break-all;
 }
