refactory：优化部分代码

--- a/src/assets/style/main.less
+++ b/src/assets/style/main.less
@@ -3,3 +3,16 @@
 @primary-color: #5A67BA;
 @second-color: #5984b886;
 @dark: #33353b;
+
+.login-input {
+    border: none;
+    width: 100%;
+    border-radius: 4px;
+    background-color: #f2f4f9;
+    outline: none;
+    box-sizing: border-box;
+    padding: 15px 20px;
+    font-size: 16px;
+    display: inline;
+    margin: 12px 0;
+}
